--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,15 @@ jobs:
             restore-keys: ${{runner.os}}-maven
       - name: Run test with Maven
         run: mvn -B test --file pom.xml
+
+      - name: Auto Merge PR
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+        uses: pascalgn/automerge-action@v0.14.3
+        env:
+            GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+            MERGE_LABELS: "automerge,!work in progress"
+            MERGE_METHOD: "squash"
+            MERGE_COMMIT_MESSAGE: "pull-request-title"
+            MERGE_RETRIES: "6"
+            MERGE_RETRY_SLEEP: "10000"
+            MERGE_REMOVE_LABELS: "automerge"
