--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,21 @@ jobs:
       - name: Run test with Maven
         run: mvn -B test --file pom.xml
 
+      - name: Add 'tests-passed' label
+        if: success()
+        uses: actions/github-script@v5
+        with:
+            github-token: ${{secrets.GITHUB_TOKEN}}
+            script: |
+              github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                labels: ['tests-passed']
+              })
+
       - name: Auto Merge PR
-        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+        if: github.event_name == 'pull_request' && github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'tests-passed')
         uses: pascalgn/automerge-action@v0.14.3
         env:
             GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
